--- a/PyDataIntro.ipynb
+++ b/PyDataIntro.ipynb
@@ -19,6 +19,30 @@
     "We strive to provide an open and welcoming community where members can contribute, grow and inspire one another.</p>\n",
     "<p>We strictly follow and enforce the NumFocus Code of Conduct which can be accessed <a href\"https://numfocus.org/code-of-conduct\">here</a>.</p>"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2>Introduction to the May-June Series</h2>\n",
+    "<p>This series is purposed to introduce fundamentals of the PyData Ecosystem that is; Data analysis, manipulation, visualization and modelling\n",
+    "using Python. Module 1 shall comprise of problem-based learning of Data analysis with Python exercises and Module 2 shall cover deep Learning for Structured Data.\n",
+    "</p>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3>How to contribute</h3>\n",
+    "<p>You can contribute by;</p>\n",
+    "<ul>\n",
+    "    <li>Offering a data problem that we can collectively solve.</li>\n",
+    "    <li>Giving a topical talk on the problem at hand</li>\n",
+    "    <li>Providing a resource such as a dataset(s), hardware resources, educational material, etc</li>\n",
+    "    <li>Offering oneself as an instructor during a session</li>\n",
+    "</ul>"
+   ]
   }
  ],
  "metadata": {
