--- a/PyDataIntro.ipynb
+++ b/PyDataIntro.ipynb
@@ -37,7 +37,7 @@
     "<h3>How to contribute</h3>\n",
     "<p>You can contribute by;</p>\n",
     "<ul>\n",
-    "    <li>Offering a data problem that we can collectively solve.</li>\n",
+    "    <li>Offering a data problem or challenge that we can collectively solve.</li>\n",
     "    <li>Giving a topical talk on the problem at hand</li>\n",
     "    <li>Providing a resource such as a dataset(s), hardware resources, educational material, etc</li>\n",
     "    <li>Offering oneself as an instructor during a session</li>\n",
