--- a/PyDataIntro.ipynb
+++ b/PyDataIntro.ipynb
@@ -41,6 +41,7 @@
     "    <li>Giving a topical talk on the problem at hand</li>\n",
     "    <li>Providing a resource such as a dataset(s), hardware resources, educational material, etc</li>\n",
     "    <li>Offering oneself as an instructor during a session</li>\n",
+    "    <li>Sponsoring a meetup(s)</li>\n",
     "</ul>"
    ]
   }
